add group details (#17)
* This Is Why We Don't Push To Production On Fridays

* Saint Pipeline, please give me the green light

* That's just how I roll
